# pybabyfpa

./: README.md  setup.cfg
.github/workflows/: publish.yaml
pyfpa/: __init__.py
src/: test.py
src/pybabyfpa/: __init__.py
src/pyfpa/: __init__.py
