[metadata]
name = pyfpa
version = 0.0.4
author = Jon Caruana
author_email = jon@joncaruana.com
description = "This package can be used to control the Baby Brezza's Formula Pro Advanced WiFi."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joncar/pyfpa
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src